Added Permission RepairRecipe.repair.overRepair Fixed Enchantment Multiplier could reduce repair costs Added Enchantment Multiplier per Group Configuration

--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -11,3 +11,6 @@ permissions:
     RepairRecipe.repair.enchant:
         description: Allow users to repair enchanted items
         default: true
+    RepairRecipe.repair.overRepair:
+        description: Allow users to over repair items
+        default: false
