Rewrote Repair cost formula Added use_highest_enchant configuration Changed discount to discount_groups and added discount as global configuration Replaced configuration keep_enchantments with keep_enchantments_chance and keep_enchantments_chance_groups

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,5 +1,8 @@
 allow_over_repair: false
-keep_enchantments: true
+keep_enchantments_chance: 100
+keep_enchantments_chance_groups: {}
 enchant_multiplier: 100
-enchant_multiplier_groups: false
-discount: false
+enchant_multiplier_groups: {}
+discount: 10
+discount_groups: {}
+use_highest_enchant: false
