--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,7 +1,7 @@
 author: attrib
 name: RepairRecipe
 main: de.funkyclan.mc.RepairRecipe.RepairRecipe
-version: 0.3
+version: 0.3-beta
 softdepend: [Vault]
 
 permissions:
