Fixed repair costs with use_highest_enchant: true Added base item configuration Added special enchant multiplier

--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,5 +1,7 @@
 author: attrib
 name: RepairRecipe
+description: Repair your items with the item you need to craft and keep enchantments.
+website: http://dev.bukkit.org/server-mods/repairrecipe/
 main: de.funkyclan.mc.RepairRecipe.RepairRecipe
 version: 0.3-beta
 softdepend: [Vault]
