--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -3,7 +3,7 @@ name: RepairRecipe
 description: Repair your items with the item you need to craft and keep enchantments.
 website: http://dev.bukkit.org/server-mods/repairrecipe/
 main: de.funkyclan.mc.RepairRecipe.RepairRecipe
-version: 0.4.4
+version: 0.4.5-beta
 softdepend: [Vault]
 
 permissions:
