--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>de.funkyclan.mc.RepairRecipe</groupId>
     <artifactId>RepairRecipe</artifactId>
     <packaging>jar</packaging>
-    <version>0.4.7</version>
+    <version>0.4.8-beta</version>
     <name>RepairRecipe</name>
     <url>http://dev.bukkit.org/bukkit-plugins/repairrecipe/</url>
     <build>
@@ -33,19 +33,19 @@
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <!-- Bukkit API Version, change if necessary -->
-            <version>1.5.2-R1.0</version>
+            <version>1.6.1-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>minecraft-server</artifactId>
             <!-- Bukkit API Version, change if necessary -->
-            <version>1.5.2</version>
+            <version>1.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <!-- Bukkit API Version, change if necessary -->
-            <version>1.5.2-R1.0</version>
+            <version>1.6.1-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
