--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>de.funkyclan.mc.RepairRecipe</groupId>
     <artifactId>RepairRecipe</artifactId>
     <packaging>jar</packaging>
-    <version>0.4.9-beta</version>
+    <version>0.4.9-beta2</version>
     <name>RepairRecipe</name>
     <url>http://dev.bukkit.org/bukkit-plugins/repairrecipe/</url>
     <build>
@@ -31,18 +31,6 @@
     <dependencies>
         <dependency>
             <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <!-- Bukkit API Version, change if necessary -->
-            <version>1.6.2-R0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>minecraft-server</artifactId>
-            <!-- Bukkit API Version, change if necessary -->
-            <version>1.6.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <!-- Bukkit API Version, change if necessary -->
             <version>1.6.2-R0.1-SNAPSHOT</version>
@@ -50,7 +38,7 @@
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.2.25-SNAPSHOT</version>
+            <version>1.2.26-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <repositories>
