--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>de.funkyclan.mc.RepairRecipe</groupId>
     <artifactId>RepairRecipe</artifactId>
     <packaging>jar</packaging>
-    <version>0.4.9-beta2-dev</version>
+    <version>0.4.9-beta3-dev</version>
     <name>RepairRecipe</name>
     <url>http://dev.bukkit.org/bukkit-plugins/repairrecipe/</url>
     <build>
@@ -33,12 +33,12 @@
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <!-- Bukkit API Version, change if necessary -->
-            <version>1.6.2-R0.1-SNAPSHOT</version>
+            <version>1.6.4-R2.0</version>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.2.26-SNAPSHOT</version>
+            <version>1.2.27</version>
         </dependency>
     </dependencies>
     <repositories>
