Updating pom to include the spigot jar, I don't think I can commit the jar to the repo though.

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>Vault</artifactId>
             <version>1.2.25-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.7.10-R0.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/spigot-1.7.10-R0.1-SNAPSHOT.jar</systemPath>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
