--- a/pom.xml
+++ b/pom.xml
@@ -33,18 +33,7 @@
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <!-- Bukkit API Version, change if necessary -->
-            <version>1.7.9-R0.3-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>minecraft-server</artifactId>
-            <!-- Bukkit API Version, change if necessary -->
-            <version>1.7.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <!-- Bukkit API Version, change if necessary -->
+            <!-- Needed for MetricsLite.java -->
             <version>1.7.9-R0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
